--- a/app/views/home/_how_wrapt_works.haml
+++ b/app/views/home/_how_wrapt_works.haml
@@ -22,3 +22,14 @@
             .text-center
               %h4.about-step__header= header
               %p.about-step__description.light= explanation
+    .row.home__gift-images.pb5
+      .col-xs-12
+        .gift-images
+          .gift-image
+            =image_tag 'home-image-scarf.jpg', alt: 'Plum Crazy scarf by Indigo Handloom'
+          .gift-image
+            =image_tag 'home-image-packaged.jpg', alt: 'Pampering bath gifts in beautiful Wrapt packaging'
+          .gift-image
+            =image_tag 'home-image-chocolate.jpg', alt: 'Chocolates by Elements Truffles'
+          .gift-image
+            =image_tag 'home-image-necklace.jpg', alt: 'Carcanet of Pearl and Moonstone by Kristin Ford'
