[#153300944] Date of birth field for giftees

--- a/app/views/my_account/giftees/_giftee_details.haml
+++ b/app/views/my_account/giftees/_giftee_details.haml
@@ -18,6 +18,7 @@
   .ma-gd__tr
     .ma-gd__td Birthdate
     .ma-gd__td
+      = format_date(giftee.birthday)
   .ma-gd__tr
     .ma-gd__td Gifts Sents
     .ma-gd__td
