--- a/app/views/customer_order_mailer/cannot_ship.text.erb
+++ b/app/views/customer_order_mailer/cannot_ship.text.erb
@@ -1,7 +1,8 @@
 Dear <%= @user.full_name %>,
 
 Because our gifts are one-of-a-kind and often limited editions, we learned
-that your gift is currently out of stock. Would you like to review <% @customer_order.profile_name %>’s
+that <%= @customer_order.line_items.count > 1 ? 'one of your gifts' : 'your gift' %> is currently out of stock.
+Would you like to review <% @customer_order.profile_name %>’s
 other recommended gifts and choose from her personalized collection?
 
 View More Gift Recommendations
