[#153238071] support 6 more recommendations

--- a/app/assets/stylesheets/modules/_carousel.scss
+++ b/app/assets/stylesheets/modules/_carousel.scss
@@ -3,6 +3,10 @@
 // contains
 //   styles for carousel_js
 
+.gr-image-pjax-carousel {
+  height: 100%;
+}
+
 // basic styles for carousel
 .wrapt-carousel {
   position: relative;
