--- a/app/views/gift_recommendations/_gift_indicators.haml
+++ b/app/views/gift_recommendations/_gift_indicators.haml
@@ -1,34 +1,25 @@
-- indicators = (@indicators || @gift_recommendations)
+- indicators = @gift_recommendations
 .visible-xs
   .wrapt-carousel__indicators.gr-carousel__indicators
-    - css_classes = "gr-carousel__sm-nav-link grc_small_nav"
-    - prev_classes = "#{css_classes} prev #{@page > 1 ? '' : 'disabled'}"
-    =link_to "< Prev", gift_path(@gift_recommendation, {page: (@page == 1 ? 1 : @page-1)}), class: prev_classes, data: {loads_in_pjax_carousel: true}
+    =link_to "< Prev", mobile_nav_prev_path, class: mobile_nav_prev_classes, data: mobile_nav_prev_data
     .grc_small_title.gr-carousel__sm-nav-text= @gift_recommendation.gift.title
-    - next_classes = "#{css_classes} next #{@page < @mobile_total_pages ? '' : 'disabled'}"
-    = link_to "Next >", gift_path(@gift_recommendation, {page: @page+1}), class: next_classes, data: {loads_in_pjax_carousel: true}
+    = link_to "Next >", mobile_nav_next_path, class: mobile_nav_next_classes, data: mobile_nav_next_data
     .gr-carousel__indicators-small
-      - @mobile_indicators.in_groups_of(@mobile_max, false).each_with_index do |group, i|
-        = render 'gift_indicator', group: group, mobile: true, i: i
+      - @gift_recommendations.each_with_index do |gr, i|
+        = render 'gift_indicator', gr: gr, mobile: true, index: i
 .hidden-xs
   .wrapt-carousel__indicators.gr-carousel__indicators
-    - indicators.in_groups_of(@max, false).each_with_index do |group, i|
-      - css_classes = []
-      - if @previous
-        - if i+1 > @page
-          - css_classes.push('gci_hide')
-        - else
-          - css_classes.push('gci_show')
-      - else
-        - style = i == 0 ? '' : 'display:none;'
-        - css_classes.push('gci_show') 
-      .gr-carousel__indicators-group{class: css_classes, style: style}
-        = render 'gift_indicator', group: group, mobile: false, i: i
+    .gr-carousel__indicators-group
+      - @gift_recommendations.each_with_index do |gr, i|
+        = render 'gift_indicator', gr: gr, mobile: false, index: i
     .clearfix
-      - if @page < @total_pages
+      - if @page != @next_page
         .pull-right
-          = link_to 'NEXT', gift_path(@gift_recommendation, {page: @page+1}), data: {loads_in_pjax_carousel: true}, class: 'btn btn-default btn-xs btn-default__white'
+          - if @profile.has_viewed_initial_recommendations?
+            = link_to 'NEXT', giftee_gift_recommendations_path(@giftee_id, carousel_page: @next_page), class: 'btn btn-default btn-xs btn-default__white'
+          - else
+            = link_to 'NEXT', giftee_more_recommendations_path(@giftee_id), class: 'btn btn-default btn-xs btn-default__white', data: {loads_in_pjax_carousel_load_more: true}
       - if @page > 1
         .pull-left
-          = link_to 'PREVIOUS', gift_path(@gift_recommendation, {page: (@page == 1 ? 1 : @page-1), previous: @page}), data: {loads_in_pjax_carousel: true}, class: 'btn btn-default btn-xs btn-default__white'
+          = link_to 'PREVIOUS', giftee_gift_recommendations_path(@giftee_id, carousel_page: @prev_page), class: 'btn btn-default btn-xs btn-default__white'
 
