--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -1,5 +1,20 @@
 @import "helpers";
 
+.markout {
+  display: inline-block;
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 2px;
+    margin-top: -2px;
+    background: #767676;
+  }
+}
+
 .co-nav {
   background-color: $blue-005;
   min-height: 55px;
