--- a/app/views/ecommerce/checkout/_edit_review_summary_item.haml
+++ b/app/views/ecommerce/checkout/_edit_review_summary_item.haml
@@ -1,11 +1,11 @@
 :ruby
-  style = markout ? 'text-decoration: line-through;' : ''
+  css_class = markout ? 'markout' : ''
 .co-ro-summary__item.clearfix
   %div= label
   - if value_in_dollars
     - if co_attr
-      %div{style: style}= number_with_precision(customer_order.send(co_attr), precision: 2)
+      %div{class: css_class}= number_with_precision(customer_order.send(co_attr), precision: 2)
     - else
-      %div{style: style}= number_with_precision(value, precision: 2)
+      %div{class: css_class}= number_with_precision(value, precision: 2)
   - elsif value
-    %div{style: style}= value
+    %div{class: css_class}= value
