--- a/app/assets/stylesheets/modules/_checkout.scss
+++ b/app/assets/stylesheets/modules/_checkout.scss
@@ -211,13 +211,8 @@
 
 .co-ro-item__details {
   display: inline-block;
-  width: 80%;
   overflow: hidden;
   vertical-align: middle;
-  // line-height: 1.2;
-  @media(max-width: $screen-sm-max) {
-    width: 56%
-  }
   h4 {
     font-size: 20px;
   }
@@ -230,6 +225,14 @@
     font-size: 13px;
     line-height: 1.2;
     letter-spacing: 1.2px;
+  }
+}
+
+.co-ro-item__shipping-and-status {
+  float: right;
+  @media(max-width: $screen-xs-max) {
+    float: none;
+    margin-top: 10px;
   }
 }
 
