--- a/app/views/ecommerce/checkout/_edit_review_gift.haml
+++ b/app/views/ecommerce/checkout/_edit_review_gift.haml
@@ -12,8 +12,12 @@
           %h4.light= gift.title
           - if show_price
             %h5.light= number_to_currency gift.selling_price
-        - if show_order_status
-          .pull-right
-            .co-detail__label.text-right Status
-            .co-detail__item.text-right= customer_order.status.titleize
+      .co-ro-item__shipping-and-status
+        .co-detail
+          .co-detail__label Shipping Method
+          .co-detail__item TODO: expected delivery date
+          .co-detail__item TODO: carrier
+          - if show_order_status
+            .co-detail__label Status
+            .co-detail__item= customer_order.status.titleize
 
