--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -8,6 +8,9 @@
   @media(max-width: $screen-xs-max) {
     padding-left: 12px;
     padding-right: 12px;
+    // on mobile let the text wrap
+    white-space: normal;
+    line-height: 1.2;
   }
 }
 .btn-narrower {
