--- a/app/views/ecommerce/checkout/edit_payment.haml
+++ b/app/views/ecommerce/checkout/edit_payment.haml
@@ -4,63 +4,16 @@
     .col-xs-12.col-md-10.col-md-offset-1
       .co-container
         %h3.light Payment Information
-        = form_tag(url_for, method: :patch) do
-
-          .row
-            .col-xs-12.col-md-8
-              .row
-                .col-xs-12.col-md-12
-                  .form-group
-                    %label{for: 'cardholder-name'} Name On Card
-                    %input#cardholder-name.name-on-card.field.form-control.string{name: 'cardholder-name'}
-              .row
-                .col-xs-12.col-md-12
-                  .form-group
-                    %label{for: 'js-card-number'}
-                      <abbr title="required">*</abbr>
-                      Card Number
-                    #js-card-number.field.form-control.string.required
-              .row
-                .col-xs-4.col-md-4
-                  .form-group
-                    %label{for: 'js-expiry-field'}
-                      <abbr title="required">*</abbr>
-                      Expiration Date
-                    #js-expiry.field.form-control.string.required
-                .col-xs-4.col-md-4
-                  .form-group
-                    %label{for: 'js-cvc'}
-                      <abbr title="required">*</abbr>
-                      CVC #
-                    #js-cvc.field.form-control.string.required
-              .row
-                .col-xs-12
-                  .form-group
-                    = wrapt_styled_checkbox(true, 'same_billing_zip', true, {label: 'Billing Zip Code & Shipping Zip Code are the same.', data: {zip: @customer_order.ship_zip}})
-              .row.j-zip-code{style: 'display:none;'}
-                .col-xs-12.col-md-12
-                  %h4.light Billing Information
-                  .form-group
-                    %label{for: 'js-postal-code'} Zip Code
-                    %input#js-postal-code.field.form-control.string{name: 'address-zip', value: @customer_order.ship_zip}
-
-
-            .col-xs-12.col-md-4
-              .outline-container.outline-container__blue.form-group.co-ro-summary
-                .outline-container__section
-                  %h4.light Summary
-                  = render 'edit_review_summary_items', customer_order: @customer_order
-                .outline-container__section.co-ro-summary__total.clearfix
-                  %h4.light Total
-                  %h5.light=number_to_currency @customer_order.total_to_charge_in_dollars
-
-          %button.btn.btn-primary{type: 'submit', disabled: true}
-            = next_button_text
-
-
-
-
-
+        .row
+          = render 'payment_form'
+          .col-xs-12.col-md-4
+            .outline-container.outline-container__blue.form-group.co-ro-summary
+              .outline-container__section
+                %h4.light Summary
+                = render 'edit_review_summary_items', customer_order: @customer_order
+              .outline-container__section.co-ro-summary__total.clearfix
+                %h4.light Total
+                %h5.light=number_to_currency @customer_order.total_to_charge_in_dollars
 
   = render "debug", customer_order: @customer_order
 
