--- a/app/views/customer_order_mailer/cannot_ship.html.haml
+++ b/app/views/customer_order_mailer/cannot_ship.html.haml
@@ -15,7 +15,7 @@
             your gift
 
           is currently out of stock. Would you like to
-          review #{@profile.name}’s other recommended gifts and choose from her
+          review #{@profile.name}’s other recommended gifts and choose from their
           personalized collection?
         = link_to "View More Gift Recommendations", giftee_gift_recommendations_url(@profile), style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
     %tr
