--- a/app/assets/stylesheets/modules/_carousel.scss
+++ b/app/assets/stylesheets/modules/_carousel.scss
@@ -145,7 +145,8 @@ $gr-carousel-nav__width: 82.5px;
 .hgec-carousel__nav {
   position: absolute;
   top: 50%;
-  width: 40px;
+  // width: 40px;
+  width: 100px;
   height: 100px;
   margin-top: -50px;
   display: table;
@@ -177,7 +178,23 @@ $gr-carousel-nav__width: 82.5px;
 .hgec-carousel__nav-icon {
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  // text-align: center;
+}
+
+.prev {
+  .gr-carousel__nav-icon,
+  .hgec-carousel__nav-icon {
+    text-align: left;
+    padding-left: 10px;
+  }
+}
+
+.next {
+  .gr-carousel__nav-icon,
+  .hgec-carousel__nav-icon {
+    text-align: right;
+    padding-right: 10px;
+  }
 }
 
 .gr-carousel__nav.prev,
@@ -203,7 +220,8 @@ $gr-carousel-nav__width: 82.5px;
 .gr-carousel__nav:hover,
 .hgec-carousel__nav:hover {
   background-color: transparent;
-  width: 50px;
+  // width: 50px;
+  width: 118px;
   height: 118px;
   margin-top: -59px;
   .gr-carousel__nav-inner {
